[package]
name = "dotthz"
version = "0.1.0"
edition = "2021"
authors = ["Linus Leo Stöckli"]
# repository = ""
description = "Crate to load and save dotThz files in rust."
readme = "README.md"
keywords = ["dotThz", "Thz-spectroscopy", "io"]
categories = ["filesystem"]
documentation = "https://docs.rs/dotthz-rs"
# homepage = ""
license = "MIT"

[dependencies]
ndarray = "0.16"
hdf5 = { package = "hdf5-metno", version = "0.9" }
chrono = "0.4"
indexmap = { version = "2.6"}
serde = { version = "1.0", optional = true, default-features = false }

[features]
default = []
serde = ["indexmap/serde", "serde/derive"]

[dev-dependencies]
tempfile = "3.14"