[package]
name = "dotthz"
version = "0.2.2"
edition = "2021"
authors = ["Linus Leo Stöckli"]
# repository = ""
description = "Crate to load and save dotThz files in rust."
readme = "README.md"
keywords = ["dotThz", "Thz-spectroscopy", "io"]
categories = ["filesystem"]
documentation = "https://docs.rs/dotthz-rs"
homepage = "https://github.com/hacknus/dotthz-rs"
license = "MIT"

[dependencies]
ndarray = "0.16"
hdf5 = { package = "hdf5-metno", version = "0.9" }
chrono = "0.4"
indexmap = { version = "2.6" }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "indexmap/serde"]
hdf5-sys-static = ["hdf5/static"]
hdf5-blosc = ["hdf5/blosc"]
hdf5-complex = ["hdf5/complex"]
hdf5-f16 = ["hdf5/f16"]
hdf5-lzf = ["hdf5/lzf"]
hdf5-mpio = ["hdf5/mpio"]
hdf5-zlib = ["hdf5/zlib"]

[dev-dependencies]
tempfile = "3.14"